; ModuleID = '/home/carl/AnghaBench/systemd/src/coredump/extr_coredump.c_storage_size_max.c'
source_filename = "/home/carl/AnghaBench/systemd/src/coredump/extr_coredump.c_storage_size_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_storage = common dso_local global i64 0, align 8
@COREDUMP_STORAGE_EXTERNAL = common dso_local global i64 0, align 8
@arg_external_size_max = common dso_local global i32 0, align 4
@COREDUMP_STORAGE_JOURNAL = common dso_local global i64 0, align 8
@arg_journal_size_max = common dso_local global i32 0, align 4
@COREDUMP_STORAGE_NONE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @storage_size_max to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @storage_size_max() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @arg_storage, align 8
  %3 = load i64, i64* @COREDUMP_STORAGE_EXTERNAL, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @arg_external_size_max, align 4
  store i32 %6, i32* %1, align 4
  br label %19

7:                                                ; preds = %0
  %8 = load i64, i64* @arg_storage, align 8
  %9 = load i64, i64* @COREDUMP_STORAGE_JOURNAL, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i32, i32* @arg_journal_size_max, align 4
  store i32 %12, i32* %1, align 4
  br label %19

13:                                               ; preds = %7
  %14 = load i64, i64* @arg_storage, align 8
  %15 = load i64, i64* @COREDUMP_STORAGE_NONE, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %13, %11, %5
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
